--- a/src/app/bmx/components/menu/menu.component.html
+++ b/src/app/bmx/components/menu/menu.component.html
@@ -128,7 +128,7 @@
           Participants
           <div class="video-container" style="z-index: 1;">
             <button (click)="CREATION_VIDEO_PATH='assets/videos/participants.mp4' ; showCreationModalVideo=true; "
-              class="video-button" matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button
+              cla ="video-button" matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button
               aria-label="ranking">
               <mat-icon style="font-size: 26px; color: white; " class="full-icon">video_library</mat-icon>
             </button>
@@ -174,4 +174,9 @@
     <mat-icon class="full-icon" style="font-size: 25px;">arrow_back
     </mat-icon>
   </button>
+</div>
+
+<div *ngIf="showErrorMessage">
+  <app-survey-dialog (onConfirm)="showErrorMessage = false" (onCancel)="showErrorMessage = false"
+      [dialogText]="'You must submit a user to display the information'"></app-survey-dialog>
 </div>
