--- a/src/app/bmx/components/menu/menu.component.html
+++ b/src/app/bmx/components/menu/menu.component.html
@@ -175,3 +175,7 @@
     </mat-icon>
   </button>
 </div>
+<div *ngIf="showErrorMessage">
+  <app-survey-dialog (onConfirm)="showErrorMessage = false" (onCancel)="showErrorMessage = false"
+      [dialogText]="'You must submit a user to display the information'"></app-survey-dialog>
+</div>
