--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,3 +73,9 @@ app-dashboard {
     content: '24';
     font-size: 24px !important;
 }
+
+.ql-editor li {
+    list-style-type: unset !important;
+    padding-left: 1.5em;
+    position: relative;
+}
