--- a/src/app/synonyms/synonyms.component.html
+++ b/src/app/synonyms/synonyms.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <input [(ngModel)]="inputText" placeholder="Water, white, fire">
+    <input [(ngModel)]="inputText" placeholder="Word1, Word2, Word3">
     <button (click)="getSynonyms()">SEARCH</button>
   </div>
   
