--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -2,7 +2,8 @@
 
   <!-- OVERVIEW SLIDE -->
   <mat-sidenav class="overview" mode="over" [opened]="overview">
-    <mat-card appearance="outlined" (click)="goToSlide(i)" style="padding: 1px 15px;" *ngFor="let item of appSlidesData; let i = index">
+    <mat-card appearance="outlined" (click)="goToSlide(i)" style="padding: 1px 15px;"
+      *ngFor="let item of appSlidesData; let i = index">
       <p style="color: #004684;cursor: pointer;border-bottom: #004684;">{{i+1}}. - {{item.SlideDescription}}</p>
       <!-- <img [src]="'http://www.bipresents.com/' + item.SlideBGFileName" alt="overview"
           style="max-width: 250px;cursor: pointer;"> -->
@@ -20,8 +21,8 @@
       </div>
 
       <button (click)="moveBackward()" [class.menu-left-icon-wide-post]="wide &&  createPostIt"
-        [class.menu-left-icon-wide]="wide &&  !createPostIt" [class.menu-left-icon]="!wide && !createPostIt"  [class.menu-left-icon-post]="!wide && createPostIt"   disableRipple
-        mat-icon-button color="red">
+        [class.menu-left-icon-wide]="wide &&  !createPostIt" [class.menu-left-icon]="!wide && !createPostIt"
+        [class.menu-left-icon-post]="!wide && createPostIt" disableRipple mat-icon-button color="red">
         <mat-icon>keyboard_arrow_left</mat-icon>
       </button>
       <button (click)="moveForward()" [class.menu-right-icon]="!wide"
@@ -97,11 +98,11 @@
       <!-- CORNER MENUS -->
 
       <div *ngIf="!mainMenu" class="bar_fullscreen" class="corner_bar_menu">
-        <button *ngIf="createPostIt" (click)="newBlankPostIt()" matTooltip="new post it" matTooltipPosition="above"
+        <button *ngIf="createPostIt" (click)="newBlankPostIt()" matTooltip="post-it" matTooltipPosition="above"
           mat-icon-button color="warn" aria-label="aria">
           <mat-icon class="full-icon">note_add</mat-icon>
         </button>
-    
+
         <button *ngIf="!createPostIt" (click)="bsr()" mat-icon-button matTooltip="post its" matTooltipPosition="above"
           mat-icon-button color="warn" aria-label="aria">
           <mat-icon class="full-icon">lightbulb_outline</mat-icon>
@@ -119,20 +120,20 @@
         <button (click)="home()" mat-icon-button matTooltip="home" matTooltipPosition="above">
           <mat-icon class="full-icon">home</mat-icon>
         </button>
-        <button *ngIf="!createPostIt" (click)="bsr()" mat-icon-button matTooltip="post its" matTooltipPosition="above"
+        <button *ngIf="!createPostIt" (click)="bsr()" mat-icon-button matTooltip="brainstorming" matTooltipPosition="above"
           mat-icon-button color="warn" aria-label="aria">
           <mat-icon class="full-icon">lightbulb_outline</mat-icon>
         </button>
-        <button *ngIf="createPostIt" (click)="newBlankPostIt()" matTooltip="new post" matTooltipPosition="above"
+        <button *ngIf="createPostIt" (click)="newBlankPostIt()" matTooltip="post-it" matTooltipPosition="above"
           mat-icon-button color="warn" aria-label="aria">
           <mat-icon class="full-icon">note_add</mat-icon>
         </button>
-      
+
         <button (click)="openFullscreen()" matTooltip="full-screen" matTooltipPosition="above" mat-icon-button
           color="warn" aria-label="aria">
           <mat-icon class="full-icon">aspect_ratio</mat-icon>
         </button>
-        <button (click)="sideMenu()" matTooltip="search" matTooltipPosition="above" mat-icon-button color="warn"
+        <button (click)="sideMenu()" matTooltip="overview" matTooltipPosition="above" mat-icon-button color="warn"
           aria-label="aria">
           <mat-icon class="full-icon">search</mat-icon>
         </button>
@@ -144,15 +145,15 @@
           mat-icon-button color="warn" aria-label="aria">
           <mat-icon class="full-icon">qr_code</mat-icon>
         </button>
-      
+
         <button *ngIf="!isNSR" (click)="openDialog('mobileInfo', 'do')" matTooltip="mobile app" mat-icon-button
           color="red">
           <mat-icon class="full-icon">phone_iphone</mat-icon>
         </button>
-      <button *ngIf="createPostIt" (click)="diplayFontSizeSlider = !diplayFontSizeSlider" matTooltip="font size"
+        <button *ngIf="createPostIt" (click)="diplayFontSizeSlider = !diplayFontSizeSlider" matTooltip="font size"
           matTooltipPosition="above" mat-icon-button color="warn" aria-label="aria">
           <mat-icon class="full-icon">font_download</mat-icon>
-          <mat-slider #slider *ngIf="diplayFontSizeSlider"  showTickMarks  discrete  (change)="setFontSize()" 
+          <mat-slider #slider *ngIf="diplayFontSizeSlider" showTickMarks discrete (change)="setFontSize()"
             class="slider-font-size" thumbLabel tickInterval="2" min="20" max="38">
             <input matSliderThumb [(ngModel)]="font_size">
           </mat-slider>
@@ -166,13 +167,17 @@
           <mat-icon class="full-icon">bento</mat-icon>
         </button>
         <button (click)="wideScreenView()" mat-icon-button matTooltip="Wide screen" matTooltipPosition="above"
-        mat-icon-button color="warn" aria-label="aria"> <svg class="full-icon" style="height: 20px"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 448 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-          <path
-            d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM224 160c6.7 0 13 2.8 17.6 7.7l104 112c6.5 7 8.2 17.2 4.4 25.9s-12.5 14.4-22 14.4H120c-9.5 0-18.2-5.7-22-14.4s-2.1-18.9 4.4-25.9l104-112c4.5-4.9 10.9-7.7 17.6-7.7z" />
-        </svg>
-      </button>
+          mat-icon-button color="warn" aria-label="aria"> <svg class="full-icon" style="height: 20px"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 448 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+            <path
+              d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM224 160c6.7 0 13 2.8 17.6 7.7l104 112c6.5 7 8.2 17.2 4.4 25.9s-12.5 14.4-22 14.4H120c-9.5 0-18.2-5.7-22-14.4s-2.1-18.9 4.4-25.9l104-112c4.5-4.9 10.9-7.7 17.6-7.7z" />
+          </svg>
+        </button>
+        <button (click)="showHotKeys = true" matTooltip="info" matTooltipPosition="above" mat-icon-button color="warn"
+          aria-label="aria">
+          <mat-icon class="full-icon">help</mat-icon>
+        </button>
         <button disabled mat-icon-button aria-label="page" style="width: 100px;font-size: 23px;color: grey !important;">
           {{pageCounter}}
         </button>
@@ -278,7 +283,7 @@
               <!-- Brandstorm and Names toolbar -->
               <mat-toolbar [class.toolbar-postit-wide]="wide && createPostIt" [class.toptoolbar]="!wide"
                 class=" mat-elevation-z12" color="primary">
-                
+
                 <div class="row">
                   <div (click)="theme()" class="col brandstorm"
                     style="color: white; font-size: 40px;font-family: Arial">
@@ -313,7 +318,8 @@
                     style="overflow-y: scroll;">
                     <!-- POST_REPEATER -->
 
-                    <div class="row post-it-container "  [style.max-width]="namesBoxIndex == 1? '1320px': namesBoxIndex == 0 && wide?'931px': wide && createPostIt? '947px': '925px'"
+                    <div class="row post-it-container "
+                      [style.max-width]="namesBoxIndex == 1? '1320px': namesBoxIndex == 0 && wide?'931px': wide && createPostIt? '947px': '925px'"
                       dragula="TASKS" [dragulaModel]="conceptData.concepts"
                       (dragulaModelChange)="conceptData.concepts = $event">
                       <div [ngClass]="postItListTheme" *ngFor="let item of conceptData.concepts; let i = index;">
@@ -341,7 +347,7 @@
                           <!-- HTML-CONTENT -->
                           <mat-card-content class="post-content" [ngStyle]="{'font-size': font_size_text}"
                             (click)="openDialog(item, 'edit')">
-                            <div class="ql-editor" [innerHTML]="item.html"></div>
+                            <div class="ql-editor card-list"  [innerHTML]="item.html"></div>
                           </mat-card-content>
 
                           <mat-icon class="deleteButton" (click)="openDialog(item, 'delete')">cancel</mat-icon>
@@ -383,8 +389,8 @@
                       <input matInput type="New Name" placeholder="name1, name2, name3" formControlName="name"
                         [(ngModel)]="newName">
                     </mat-form-field>
-                    <button style (click)="submitNewName(); newName=''" mat-icon-button color="success" [class.button2]="nameIndexCounter==2" 
-                      aria-label="icon" style="outline: none;
+                    <button style (click)="submitNewName(); newName=''" mat-icon-button color="success"
+                      [class.button2]="nameIndexCounter==2" aria-label="icon" style="outline: none;
                           position: absolute;
                         outline: none;
                         font-size: 50px;
@@ -430,8 +436,8 @@
                       <input matInput type="New Name" placeholder="name1, name2, name3" formControlName="name"
                         [(ngModel)]="newName">
                     </mat-form-field>
-                    <button (click)="submitNewName(); newName=''" [class.form-button2]="namesBoxIndex == 0" mat-icon-button color="success" aria-label="icon"
-                      style="outline: none;
+                    <button (click)="submitNewName(); newName=''" [class.form-button2]="namesBoxIndex == 0"
+                      mat-icon-button color="success" aria-label="icon" style="outline: none;
                         position: absolute;
                       outline: none;
                       font-size: 50px;
@@ -479,11 +485,11 @@
                     <mat-icon>home</mat-icon>
                   </button>
 
-                  <button matTooltip="New Concept" matTooltipPosition="above" (click)="newBlankPostIt()" mat-icon-button
+                  <button matTooltip="brainstorming" matTooltipPosition="above" (click)="newBlankPostIt()" mat-icon-button
                     color="primary" aria-label="Example icon-button with a heart icon">
                     <mat-icon>note_add</mat-icon>
                   </button>
-             
+
                   <input class="search" placeholder="search" type="text" (input)="searchTerm($event.target.value)">
 
                   <button (click)="moveBackward()" mat-icon-button color="accent"
@@ -536,5 +542,9 @@
 
 </mat-sidenav-container>
 
-
-<!-- <hotkeys-cheatsheet title="Hotkeys Menu"></hotkeys-cheatsheet> -->
+<div *ngIf="showHotKeys" class="dialog-overlay">
+  <div class="hotkeys-close" (click)="showHotKeys = false">x</div>
+  <div class="dialog-content">
+    <img src="assets/img/hotkeys.png" alt="">
+  </div>
+</div>
