--- a/src/app/bsr/editPost-it.html
+++ b/src/app/bsr/editPost-it.html
@@ -157,7 +157,7 @@
           <div class="row justify-content-center">
             <div class="col-12 col-md-6 col-lg-3 text-center mb-3">
               <div>
-                <p class="instruction-text">1. Access</p>
+                <p class="instruction-text">1. Access www.mynamepage.com/{{projectName}}</p>
               </div>
               <div>
                 <img class="instruction-style img-fluid" src="assets/img/bsr/login_page.JPG" alt="Login">
@@ -201,7 +201,6 @@
         .instruction-text {
           font-size: 16px;
           white-space: nowrap;
-          overflow: hidden;
           text-overflow: ellipsis;
           transition: font-size 0.3s ease;
         }
@@ -327,7 +326,7 @@
 
                         <mat-icon class="synonymsIcon" matTooltip="copy to clip board before search"
                             matTooltipPosition="above" (click)="getSynonyms(model.editorData)">layers</mat-icon>
-                            <quill-editor #editor [ngModelOptions]="{standalone: true}" [(ngModel)]="model.editorData"
+                            <quill-editor #editor [ngModelOptions]="{standalone: true}" class="quill-editor" [(ngModel)]="model.editorData"
                             [styles]="{ height: '280px' }" [modules]="editorConfig">
               </quill-editor>
                     </div>
