Fixed new names

--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -57,8 +57,8 @@
               <form name="loginForm" [formGroup]="loginForm" novalidate class="open-close-container">
                 <mat-form-field class="comment-field " appearance="outline">
                   <mat-label>Comment's Box</mat-label>
-                  <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="4" [(ngModel)]="commentBoxText"
-                    formControlName="suma" cdkAutosizeMaxRows="4" appearance="outline"></textarea>
+                  <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="4"  [(ngModel)]="commentBoxText"
+                    formControlName="suma" cdkAutosizeMaxRows="4" appearance="outline" id="commentBox"></textarea>
                 </mat-form-field>
               </form>
             </div>
