--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -38,7 +38,7 @@ height: 100vh;">
                     <button class="submit-button" mat-raised-button style="color: white;" color="primary"
                     (click)="submitCredentials()">Sign In</button>
                     <button class="submit-button" mat-raised-button style="color: white;" color="primary"
-                    (click)="signInMicrosoft()">Sign In width microsoft</button>
+                    (click)="signInMicrosoft()">Sign In with microsoft</button>
                         <mat-error *ngIf="false">
                             Username or password incorrect or not register
                         </mat-error>
