--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
@@ -19,7 +19,7 @@ style="display: flex;flex-direction: column;gap: 2px;">
 <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺RAGE INPUTS FOR COLUMN SETTINGS ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
 
 <div *ngIf="isColumnResizerOn && bmxClientPageOverview" class="pageOverview" >
-    <div style="display: flex;flex-direction: column;align-items: center;">
+    <div class='row'>
         <p style="margin: 0 0 -12px;color: #324395;">select
         </p>
         <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].selectWidth"
@@ -28,7 +28,7 @@ style="display: flex;flex-direction: column;gap: 2px;">
     </div>
 
     <!-- NAME CANDIATES -->
-    <div style="display: flex;flex-direction: column;align-items: center;">
+    <div class='row'>
         <p style="margin: 0 0 -12px;color: #324395;">candidates
         </p>
         <input type="range" style="margin: 20px;width: 50px;"
@@ -39,7 +39,7 @@ style="display: flex;flex-direction: column;gap: 2px;">
     <!-- RATIONALE -->
 
 
-    <div style="display: flex;flex-direction: column;align-items: center;">
+    <div class='row'>
         <p style="margin: 0 0 -12px;color: #324395;">rationale
         </p>
         <input type="range" style="margin: 20px;width: 50px;"
@@ -48,7 +48,7 @@ style="display: flex;flex-direction: column;gap: 2px;">
     </div>
 
     <!-- RATE -->
-    <div style="display: flex;flex-direction: column;align-items: center;">
+    <div class='row'>
         <p style="margin: 0 0 -12px;color: #324395;">rate
         </p>
         <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].rateWidth"
@@ -57,7 +57,7 @@ style="display: flex;flex-direction: column;gap: 2px;">
     </div>
 
     <!-- COMMENTS -->
-    <div *ngIf="columnsNames.includes('Comments0')" style="display: flex;flex-direction: column;align-items: center;">
+    <div *ngIf="columnsNames.includes('Comments0')" class='row'>
         <p style="margin: 0 0 -12px;color: #324395;">comments
         </p>
         <input type="range" style="margin: 20px;width: 50px;"
@@ -66,7 +66,7 @@ style="display: flex;flex-direction: column;gap: 2px;">
     </div>
 
     <!-- REST OF THE COLUMNS -->
-    <div style="display: flex;flex-direction: column;align-items: center;">
+    <div class='row'>
         <p style="margin: 0 0 -12px;color: #324395;">other columns
         </p>
         <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].columnWidth"
@@ -76,7 +76,7 @@ style="display: flex;flex-direction: column;gap: 2px;">
 
     <!-- ROW HEIGHT -->
 
-    <div style="display: flex;flex-direction: column;align-items: center;">
+    <div class='row'>
         <p style="margin: 0 0 -12px;color: #324395;">row height</p>
         <input type="range" style="margin: 20px;width: 60px;" [(ngModel)]="bmxItem.componentSettings[0].rowHeight"
             class="slider-font-size" tickInterval="0.5" min="-10" max="20"
@@ -84,7 +84,7 @@ style="display: flex;flex-direction: column;gap: 2px;">
     </div>
 
     <!-- FONT -->
-    <div style="display: flex;flex-direction: column;align-items: center;">
+    <div class='row'>
         <p style="margin: 0 0 -12px;color: #324395;">font size: {{bmxItem.componentSettings[0].fontSize}}</p>
         <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].fontSize"
             class="slider-font-size" tickInterval="0.1" min="2" max="50"
@@ -92,7 +92,7 @@ style="display: flex;flex-direction: column;gap: 2px;">
     </div>
 
     <!-- RADIO -->
-    <div *ngIf="radioColumnCounter > 1" style="display: flex;flex-direction: column;align-items: center;">
+    <div *ngIf="radioColumnCounter > 1" class='row'>
         <p style="margin: 0 0 -12px;color: #324395;">radio</p>
         <input type="range" style="margin: 20px;width: 50px;"
             [(ngModel)]="bmxItem.componentSettings[0].radioColumnsWidth" class="slider-font-size" tickInterval="0.5"
@@ -179,9 +179,7 @@ style="display: flex;flex-direction: column;gap: 2px;">
 
 <div *ngIf="i === selectedIndex" class="mat-elevation-z4 config-box">
 
-<div class="example-handle" cdkDragHandle style="display: flex;
-flex-direction: row;
-justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24px" fill="currentColor"
+<div class="example-handle" cdkDragHandle ><svg width="24px" fill="currentColor"
         viewBox="0 0 24 24">
         <path
             d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z">
@@ -540,13 +538,20 @@ align-items: center; ">
 
 
                     <!-- TEXT_AREA COLUMN COMMENTS-->
-                    <textarea *ngIf="y !== 0  && columnName.includes('Comments') == true"
-                        [style.width]="(bmxItem.componentSettings[0].commentsWidth - 20) +'px'"
-                        [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'" cdkTextareaAutosize
-                        [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
-                        style="text-align: center;height: 32px;width: 358px;font-size: 16px;border: 1px solid #dddddd;"
-                        class="row-box" [(ngModel)]="testName[columnName]"></textarea>
+                    <textarea *ngIf="y !== 0 && columnName.includes('Comments')"
+                    cdkTextareaAutosize
+                    [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
+                    [cdkAutosizeMaxRows]="10" 
+                    [style.width]="(bmxItem.componentSettings[0].commentsWidth - 20) + 'px'"
+                    [style.fontSize]="bmxItem.componentSettings[0].fontSize + 'px'"
+                    [style.textAlign]="'center'"
+                    [style.border]="'1px solid #dddddd'"
+                    class="row-box"
+                    [style.height]="'132px'"
 
+                    [(ngModel)]="testName[columnName]">
+          </textarea>
+          
 
                     <!-- TEXT AREA TO EDIT TABLE CELL CONTENT -->
                     <textarea *ngIf="y !== 0  && editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
