--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.scss
@@ -222,6 +222,7 @@
 .row-box {
   border: none;
   // max-width: 300px;
+  min-height: 30px !important;
 }
 
 .rationale-box {
@@ -363,6 +364,14 @@ mat-form-field {
   bottom: -2;
 }
 
+.example-handle {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  cursor: move;
+  height: 25px;
+  width: 100%;
+}
 // INPUT RANGE STYLE
 
 input[type="range"] {
@@ -763,5 +772,10 @@ input[type="range"]:focus::-ms-fill-upper {
   }
 }
 
+.row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 // 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜
 // END OF THE SCSS PROJECT *******************************************************************************************
