--- a/src/app/bmx/components/participants-email/participants-email.component.scss
+++ b/src/app/bmx/components/participants-email/participants-email.component.scss
@@ -1,5 +1,8 @@
-@media (max-width: 1720px) {
+.invite {
+    margin: 20px 0 60px 0;
+}
 
+@media (max-width: 1720px) {
     // .container {
     //     display: flex;
     //     width: 100%;
@@ -8,19 +11,14 @@
     // }
     .options {
         display: flex;
-        flex-direction: column !important;
     }
 
     .email-container {
         width: 40% !important;
     }
-
-
 }
 
-
 @media (max-width: 1720px) {
-
     // .container {
     //     display: flex;
     //     width: 100%;
@@ -29,12 +27,10 @@
     // }
     .options {
         display: flex;
-        flex-direction: column !important;
     }
 
     .email-container {
         width: -webkit-fill-available !important;
-
     }
 
     .invite {
@@ -43,28 +39,33 @@
 }
 
 @media (max-width: 1499px) {
-
     .container {
         display: flex;
         gap: 5%;
         max-width: 100%;
         padding: 0;
-        flex-direction: column-reverse;
+        flex-direction: column;
         display: flex;
         gap: 5%;
         max-width: 100%;
         padding: 0;
         align-items: center;
-
     }
 
     .participants-container {
-        width: 60%;
+        width: 95%;
         margin-bottom: 40px;
     }
 }
 
-input{
+input {
     border: 1px solid #868686;
     border-radius: 3px;
+}
+
+.input {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 20px;
+    justify-content: space-between;
 }
