--- a/src/app/bmx/components/project-information/project-information.component.scss
+++ b/src/app/bmx/components/project-information/project-information.component.scss
@@ -35,12 +35,14 @@
   visibility: hidden;
 }
 
-.directorCard:hover>.optionButton {
+.directorCard:hover > .optionButton {
   visibility: visible;
 }
 
-.selectLabels{
+.selectLabels {
   // width: 100%;
+  margin-right: 19px;
+  color: #324395;
 }
 
 table {
@@ -78,7 +80,8 @@ table {
 .cdk-drag-preview {
   box-sizing: border-box;
   border-radius: 4px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+  box-shadow:
+    0 5px 5px -3px rgba(0, 0, 0, 0.2),
     0 8px 10px 1px rgba(0, 0, 0, 0.14),
     0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
@@ -99,24 +102,53 @@ table {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
+.buttons-container {
+  display: flex;
+  gap: 12px;
+  height: 100%;
+  position: relative;
+  top: -9px;
+}
+
+.directors-container {
+  display: flex;
+  gap: 6%;
+}
+
 @media screen and (max-width: 1203px) {
   .row-field {
     display: flex;
-    flex-direction: column;
     margin-left: 96px;
     align-items: baseline;
     gap: 2px;
   }
+
   .information-container {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     margin-left: 96px;
     align-items: baseline;
   }
 
-}
+  .buttons-container {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    height: 100%;
+    position: relative;
+    top: 5px;
+  }
 
+  .directors-container {
+    display: flex;
+    gap: 6%;
+    flex-direction: column;
+  }
+
+  .bottom-row {
+    gap: 121px;
+  }
+}
 
 /* Estilo para oscurecer el fondo */
 .modal-background {
@@ -125,8 +157,10 @@ table {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* Fondo oscuro con opacidad */
-  z-index: 1000; /* Asegura que el fondo esté por encima de otros elementos */
+  background: rgba(0, 0, 0, 0.5);
+  /* Fondo oscuro con opacidad */
+  z-index: 1000;
+  /* Asegura que el fondo esté por encima de otros elementos */
 }
 
 /* Estilo para el modal */
@@ -135,11 +169,13 @@ table {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 65%; /* Ajusta según tus necesidades */
+  width: 65%;
+  /* Ajusta según tus necesidades */
 
   background-color: white;
   padding: 10px 20px 20px 20px;
-  z-index: 2000; /* Asegura que el modal esté por encima del fondo oscuro */
+  z-index: 2000;
+  /* Asegura que el modal esté por encima del fondo oscuro */
 }
 
 .modal-content {
@@ -151,10 +187,9 @@ table {
   width: 100%;
   display: flex;
   justify-content: flex-end;
-
 }
 
-.modal-content{
+.modal-content {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -163,10 +198,38 @@ table {
 }
 
 /* TODO(mdc-migration): The following rule targets internal classes of select that may no longer apply for the MDC version.*/
-::ng-deep .mat-select-value .edit-icon{
+::ng-deep .mat-select-value .edit-icon {
   display: none !important;
 }
 
-input{
+input {
   border: none;
+}
+
+.button-golden {
+  position: absolute;
+  top: 72px;
+  right: 5px;
+  color: goldenrod;
+}
+
+.button-red {
+  position: absolute;
+  top: 45px;
+  right: 5px;
+  color: red;
+}
+
+.button-orange {
+  position: absolute;
+  top: 9px;
+  right: 5px;
+  color: #ee7f25;
+}
+
+.button-blue {
+  position: absolute;
+  top: 9px;
+  right: 5px;
+  color: #053074;
 }
