--- a/src/app/bmx/components/project-list/project-list.component.html
+++ b/src/app/bmx/components/project-list/project-list.component.html
@@ -38,9 +38,9 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Office </th>
                     <td mat-cell *matCellDef="let element"> {{element.bmxRegion}} </td>
                 </ng-container>
-                <ng-container matColumnDef="Created">
+                <ng-container matColumnDef="bmxCreated">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Created </th>
-                    <td mat-cell *matCellDef="let element"> {{element.Created}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.bmxCreated}} </td>
                 </ng-container>
                 <ng-container matColumnDef="Close">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Close </th>
@@ -68,7 +68,7 @@
                 <ng-container matColumnDef="Email">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-icon-button style="color: #488abc;"
+                        <button mat-icon-button style="color: #488abc;" matTooltip="send email" matTooltipPosition="above"
                             aria-label="Example icon button with a home icon"
                             (click)="sendEmail(element.bmxProjectName)">
                             <mat-icon>email</mat-icon>
@@ -78,7 +78,7 @@
                 <ng-container matColumnDef="Edit">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-icon-button style="color: #48bcb4;"
+                        <button mat-icon-button style="color: #48bcb4;" matTooltip="config template" matTooltipPosition="above"
                             aria-label="Example icon button with a home icon" (click)="editBM(element.bmxProjectName)">
                             <mat-icon>build</mat-icon>
                         </button>
@@ -87,7 +87,7 @@
                 <ng-container matColumnDef="Delete" *ngIf="userRole == 'admin'">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-icon-button style="color: #bc488a;"
+                        <button mat-icon-button style="color: #bc488a;"  matTooltip="double click to delete" matTooltipPosition="above"
                             aria-label="Example icon button with a home icon"
                             (click)="showDialog = true;projectName = element.bmxProjectName ; dialogText = 'Are you sure you want to delete ' + element.bmxProjectName">
                             <mat-icon>delete</mat-icon>
