--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
@@ -3,7 +3,7 @@
   <mat-icon class="full-icon" style="font-size: 25px;">check_circle</mat-icon>
 </button>
 <button *ngIf="!openSettings && bmxClientPageOverview" mat-icon-button class="edit-icon"
-  (click)="editTextWithEditor(); openSettings = !openSettings;">
+  (click)=" openSettings = !openSettings;">
   <mat-icon class="full-icon" style="font-size: 25px;">edit</mat-icon>
 </button>
 
