Changes in synonims

--- a/src/app/bsr/editPost-it.html
+++ b/src/app/bsr/editPost-it.html
@@ -324,7 +324,7 @@
                     border: 1px solid #004684; color: #004684;  max-width: 650px;  min-width: 350px;">
                         <h2 class="text-bold " style="margin: 5px;">Key Words and Concepts</h2>
 
-                        <mat-icon class="synonymsIcon" matTooltip="copy to clip board before search"
+                        <mat-icon class="synonymsIcon" matTooltip="access thesaurus"
                             matTooltipPosition="above" (click)="getSynonyms(model.editorData)">layers</mat-icon>
                             <quill-editor #editor [ngModelOptions]="{standalone: true}" class="quill-editor" [(ngModel)]="model.editorData"
                             [styles]="{ height: '280px' }" [modules]="editorConfig">
