--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -156,13 +156,15 @@
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;    z-index: 9;" class="full-icon">swap_horizontal_circle</mat-icon>
         </button>
+        
         <button (click)="selectedIndex = i; editSingleTableCells = false; verifyCritera()" class="add-column"
             matTooltip="setup settings" matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
-        <button (click)="showModalTable = true" class="add-column" matTooltip="Update names" matTooltipPosition="above"
+        
+        <button (click)="showFileUploader = true" class="add-column" matTooltip="update names" matTooltipPosition="above"
             *ngIf="i !== selectedIndex" mat-icon-button>
-            <mat-icon style="font-size: 25px;" class="full-icon"> text_fields</mat-icon>
+            <mat-icon style="font-size: 25px;" class="full-icon">text_fields</mat-icon>
         </button>
     </div>
 </div>
@@ -229,29 +231,6 @@
 
     <br>
     <!-- Cards Test Name-->
-    <mat-card class="example-card">
-        <mat-card-header>
-            <mat-card-title>Test Names</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-            <div style="text-align: center;"><!-- <p style="margin-left: 30px; color: #757575;">
-                    Add the names you want to test
-                </p> -->
-                <div style="font-size: 16px;margin: 20px;color: #48535e;">PASTE TEST NAMES</div>
-                <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
-            </div>
-            <div>
-                <mat-form-field style="width: 90%;margin-left: 20px;" appearance="outline">
-                    <mat-label>Add the names you want to test</mat-label>
-                    <textarea matInput rows="4" cols="50" [(ngModel)]="testNamesInput" placeholder=""
-                        (ngModelChange)="upLoadNamesAndRationales(testNamesInput, true); "></textarea>
-                </mat-form-field>
-
-            </div>
-
-        </mat-card-content>
-
-    </mat-card>
 
     <br>
 
@@ -1012,7 +991,7 @@
                             {{star.icon}}</mat-option>
                     </mat-select>
                 </mat-form-field>
-            </div>
+            </div>p
 
         </div>
 
@@ -1022,3 +1001,6 @@
 <!--🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑END RATING TABLE 🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑-->
 <app-table *ngIf="showModalTable" (save)="showModalTable = $event" [displayedColumns]="columnsNames"
     [dataSource]="dataSource" (cancelEvent)="showModalTable = false"></app-table>
+
+    <app-names-uploader *ngIf="showFileUploader"  (save)="showFileUploader = false" [displayedColumns]="columnsNames"
+[dataSource]="dataSource" (cancelEvent)="showFileUploader = false"></app-names-uploader>
